Wraps the logo into a link correctly

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,7 +43,6 @@ $contacts-gray: #5D6266;
 
   &__menu {
     min-height: inherit;
-    flex-grow: 1;
     display: grid;
     align-items: center;
 
